fixes slider in dark mode

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -498,7 +498,7 @@ button:hover {
   to {opacity: 1;}
 }
 #recent_title {
-  color: var(--white);
+  color: white;
   display: inline;
   position: relative;
   font-size: 20px;
